# plutus-bug

./: CHANGELOG.md  cabal.project  plutus-bug.cabal
src/: PlutusBug.hs
test/: Main.hs  UnitTests.hs
