cabal-version:      2.4
name:               plutus-bug
version:            0.1.0.0

author:             Julian Ospald
maintainer:         hasufell@posteo.de

extra-source-files: CHANGELOG.md

common common-extensions
  default-extensions:
    DataKinds
    -- NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  hs-source-dirs:      src
  exposed-modules:     PlutusBug
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , lens
                     , playground-common
                     , plutus-core
                     , plutus-contract
                     , plutus-chain-index
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , plutus-ledger-api
                     , mono-traversable
  default-language:    Haskell2010


test-suite plutus-bug-tests
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: UnitTests
  default-language: Haskell2010
  build-depends:       base ^>=4.14.1.0
                     , QuickCheck
                     , aeson
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , plutus-bug
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , freer-simple

